# ObjectTracking

./: .CMakeLists.txt.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  dependencies.sh  main.cpp
Algorithms/: .CMakeLists.txt.swp  AbstractAlgorithm.h  CMakeLists.txt  TldAlgorithm.h
Algorithms/Feature/: CMakeLists.txt  FeatureDetect.cpp  FeatureDetect.h
Algorithms/Feature/unittests/: .CMakeLists.txt.swp  CMakeLists.txt  feature_unittests.cpp
Algorithms/Kalman/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h
Algorithms/Kalman/unittests/: CMakeLists.txt  kalman_unittests.cpp
Algorithms/OptFlow/: CMakeLists.txt  OpticalFlow.cpp  OpticalFlow.h
Algorithms/OptFlow/unittests/: CMakeLists.txt  optflow_unittests.cpp
Algorithms/Tld/: CMakeLists.txt  TldAlgorithm.cpp  TldAlgorithm.h
Algorithms/Tld/unittests/: .feature_unittests.cpp.swp  CMakeLists.txt  tld_unittests.cpp
Algorithms/TldOpenCV/: CMakeLists.txt  TldOpenCVAlgorithm.cpp  TldOpenCVAlgorithm.h
Algorithms/TldOpenCV/unittests/: CMakeLists.txt  tldopencv_unittests.cpp
Algorithms/Utils/: CMakeLists.txt  MeasuredData.cpp  MeasuredData.h  NNMatcher.cpp  NNMatcher.h  PointContainer.cpp  PointContainer.h  State.cpp  State.h
Algorithms/unittests/: CMakeLists.txt  algorithms_unittests.cpp
FrameProcessing/: CMakeLists.txt  ImageMarker.cpp  ImageMarker.h  ImageTransform.cpp  ImageTransform.h  PatternController.cpp  PatternController.h  State.cpp  State.h  TransformContainer.cpp  TransformContainer.h  VideoLoader.cpp  VideoLoader.h
OpenCV/: CMakeLists.txt
OpenCV/include/opencv2/: opencv_modules.hpp
OpenCV/include/opencv2/core/: cvstd.hpp
OpenCV/lib/: libopencv_adas.so.3.0.0  libopencv_bgsegm.so.3.0.0  libopencv_calib3d.so.3.0.0  libopencv_ccalib.so.3.0.0  libopencv_datasets.so.3.0.0  libopencv_face.so.3.0.0  libopencv_flann.so.3.0  libopencv_highgui.so.3.0.0  libopencv_imgcodecs.so.3.0  libopencv_latentsvm.so.3.0.0  libopencv_line_descriptor.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_optflow.so.3.0  libopencv_photo.so.3.0.0  libopencv_reg.so.3.0.0  libopencv_rgbd.so.3.0.0  libopencv_saliency.so.3.0.0  libopencv_shape.so.3.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_surface_matching.so.3.0.0  libopencv_text.so.3.0.0  libopencv_tracking.so.3.0.0  libopencv_video.so.3.0  libopencv_videostab.so.3.0.0  libopencv_xfeatures2d.so.3.0.0  libopencv_ximgproc.so.3.0.0  libopencv_xobjdetect.so.3.0.0  libopencv_xphoto.so.3.0.0  script.sh
OpenTLD/: CMakeLists.txt
OpenTLD/libopentld/: CMakeLists.txt
samples/: sample1.ref  sample2.ref  sample3.ref  sample4.ref  sample_1.wmv  sample_2.wmv  sample_3.wmv  sample_4.wmv
